Logotipos e imagen del Hospital

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Microsoft Homepage Clone</title>
+  <title>UHospital-Inicio</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- Nav -->
     <nav class="main-nav">
-      <img src="https://i.ibb.co/wwLhz98/logo.png" alt="Microsoft" class="logo">
+      <img src=Imagenes/Logo.png alt="UHospital" class="logo">
 
       <ul class="main-menu">
         <li><a href="#">Office</a></li>
