Actualizaciones de admin

--- a/FrontEnd/login/login.html
+++ b/FrontEnd/login/login.html
@@ -139,7 +139,7 @@
               <input id="usuario" type="text" placeholder="Nombre de usuario" class="forms_field-input" required />
             </div>
             <div class="forms_field">
-              <input id="pass" type="password" placeholder="Contraseña" class="forms_field-input" required />
+              <input id="pass" type="password" placeholder="Contraseña" class="forms_field-input" value="" required />
             </div>
             <div class="forms_field">
               <input id="number" type="number" placeholder="Número telefónico (opcional)" class="forms_field-input"/>
