Módulo de admnistrador terminado

--- a/FrontEnd/admin/Ver enfermera/vista.html
+++ b/FrontEnd/admin/Ver enfermera/vista.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="../Ver usuario/icon.ico">
-  <title>Vista de usuario</title>
+  <link rel="shortcut icon" type="image/x-icon" href="../Ver enfermera/icon.ico">
+  <title>Vista de enfermera</title>
  <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -26,6 +26,6 @@
   </form>
 </div>
 <!-- partial -->
- <script src="../Ver usuario/vistas.js"></script> 
+ <script src="../Ver enfermera/vistas.js"></script> 
 </body>
 </html>
