--- a/FrontEnd/admin/Ver medico/vista.html
+++ b/FrontEnd/admin/Ver medico/vista.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="../Ver usuario/icon.ico">
-  <title>Vista de usuario</title>
+  <link rel="shortcut icon" type="image/x-icon" href="../Ver medico/icon.ico">
+  <title>Vista de médico</title>
  <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -17,6 +17,7 @@
     <label for="vsexo">Sexo</label><input id="vsexo" name="orderNumber" type="text" readonly/>
     <label for="vusuario">Nombre de usuario</label><input id="vusuario" name="orderNumber" type="text"  readonly/>
     <label for="vpass">Contraseña</label><input id="vpass" name="orderNumber" type="text" readonly/>
+    <label for="vesp">Especialidad</label><input id="vesp" name="orderNumber" type="text" readonly/>
     <label for="vnumber">Teléfono</label><input id="vnumber" name="orderNumber" type="tel" readonly/>
     <div id="Pasa">
 
@@ -26,6 +27,6 @@
   </form>
 </div>
 <!-- partial -->
- <script src="../Ver usuario/vistas.js"></script> 
+ <script src="../Ver medico/vistas.js"></script> 
 </body>
 </html>
