--- a/FrontEnd/admin/inicio.html
+++ b/FrontEnd/admin/inicio.html
@@ -62,11 +62,18 @@
   <a href="#Reportes">Reportes</a>
   <p>
    
+    <p></p>
+    <i class="uil-chart"></i> 
+    <a href=""> Estadísticas</a>
+   <p></p>  
+
   </p>
  <p></p>
  <i class="uil-circle"></i> 
  <a href="../login/login.html"> Cerrar Sesión</a>
 <p></p>
+
+
 
   
 </aside>
