--- a/FrontEnd/Enfermera/perfil.html
+++ b/FrontEnd/Enfermera/perfil.html
@@ -28,7 +28,7 @@
 		</div>
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="propClone"><a href="../Paciente/inicio.html">Regresar</a></li>
+				<li class="propClone"><a href="../Enfermera/inicio.html">Regresar</a></li>
 				<li class="propClone"><a href="../index.html">Cerrar sesión</a></li>
 			
 			</ul>
@@ -166,6 +166,6 @@
 <script src="../js/jquery-.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/anim.js"></script>
-<script src="../Paciente/funciones.js"></script>
+<script src="../Enfermera/funciones.js"></script>
 </body>
 </html>
