--- a/FrontEnd/Medico/cita.html
+++ b/FrontEnd/Medico/cita.html
@@ -28,8 +28,8 @@
 		</div>
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="propClone"><a href="#historial">Historial de citas</a></li>
-				<li class="propClone"><a href="../Paciente/inicio.html">Regresar</a></li>
+			
+				<li class="propClone"><a href="../Medico/inicio.html">Regresar</a></li>
 				<li class="propClone"><a href="../index.html">Cerrar sesión</a></li>
 		
 			</ul>
@@ -49,20 +49,7 @@
 </header>
 <!-- CONTENT =============================-->
 <section class="item content">
-<div class="container toparea">
-	<div class="underlined-title">
-		<div class="editContent">
-			<br><br><br><br><br>
-			<h1 class="text-center latestitems">Genera tu cita</h1>
-		</div>
-		<div class="wow-hr type_short">
-			<span class="wow-hr-h">
-			<i class="fa fa-star"></i>
-			<i class="fa fa-star"></i>
-			<i class="fa fa-star"></i>
-			</span>
-		</div>
-	</div>
+<br><br><br><br>
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
 			<div class="done">
@@ -71,38 +58,14 @@
 			
 				</div>
 			</div>
-			<form  id="contactform" onsubmit=" generar_cita(); return false">
-				<p id="edd-last-name-wrap">
-					<label class="edd-label" for="fecha">
-					Fecha <span class="edd-required-indicator">*</span></label>
-				</p>
-					<input class="edd-input required" style="width: 200px;" type="date"  id="fecha"  required/>
-					<p id="edd-last-name-wrap">
-						<label class="edd-label" for="fecha">
-						Hora <span class="edd-required-indicator">*</span></label>
-					</p>
-						<input class="edd-input required" style="width: 200px;" type="time"  id="hora"  value="" required />
-						<p id="edd-last-name-wrap">
-							<label class="edd-label" for="fecha">
-							Motivo  <span class="edd-required-indicator">*</span></label>
-						</p>
-							<input class="edd-input required" style="width: 800px;" type="text"  id="motivo" placeholder="Ejemplo: Dolor de cabeza, pérdida de peso, etc." value="" required />
-							
-					<input type="submit" formvalidate  class="solicitar" id="solicitar" name="edd-purchase" value="SOLICITAR" style="background-color:#050c16c2;"  >
-			</form>
-			<p>Nota: No puedes solicitar una nueva cita si ya tienes otra en estado pendiente o aceptada.</p>
-		</div>
-	</div>
-</div>
-</div>
-</section>
-
+			
+</div></div></div>
 <section>
 	<div class="container toparea">
 		<div class="underlined-title">
 			<div class="editContent">
 				<br><br><br><br><br>
-				<h1 class="text-center latestitems" id="historial">Historial de citas</h1>
+				<h1 class="text-center latestitems" id="historial">Citas pendientes</h1>
 			</div>
 			<div class="wow-hr type_short">
 				<span class="wow-hr-h">
@@ -114,7 +77,7 @@
 		</div>
 		<div id="registro">
 			
-		</div>
+		</div></div>
 </section>
 <!-- CALL TO ACTION =============================-->
 <section class="content-block" style="background-color:#00bba7;">
@@ -144,14 +107,13 @@
 			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 		</ul>
 		<p>
-			 &copy; U Hospital<br/>
+			 &copy; 2021 U Hospital<br/>
 			Luisa María Ortíz Romero
-		</p>
 	</div>
 </div>
 </div>
 <!-- SCRIPTS =============================-->
-<script src="../Paciente/citas.js"></script>
+<script src="../Medico/citas.js"></script>
 <script src="../js/jquery-.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/anim.js"></script>
