--- a/FrontEnd/Medico/perfil.html
+++ b/FrontEnd/Medico/perfil.html
@@ -28,7 +28,7 @@
 		</div>
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="propClone"><a href="../Paciente/inicio.html">Regresar</a></li>
+				<li class="propClone"><a href="../Medico/inicio.html">Regresar</a></li>
 				<li class="propClone"><a href="../index.html">Cerrar sesión</a></li>
 			
 			</ul>
@@ -107,6 +107,11 @@
 					</p>
 					<p id="edd-last-name-wrap">
 						<label class="edd-label" for="telefono">
+						Especialidad </label>
+						<input class="edd-input required" type="tel" name="edd_last" id="especialidad" placeholder="Especialidad" value="" >
+					</p>
+					<p id="edd-last-name-wrap">
+						<label class="edd-label" for="telefono">
 						Teléfono </label>
 						<input class="edd-input required" type="tel" name="edd_last" id="telefono" placeholder="Teléfono" value="" >
 					</p>	
@@ -166,6 +171,6 @@
 <script src="../js/jquery-.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/anim.js"></script>
-<script src="../Paciente/funciones.js"></script>
+<script src="../Medico/funciones.js"></script>
 </body>
 </html>
