--- a/FrontEnd/Enfermera/inicio.html
+++ b/FrontEnd/Enfermera/inicio.html
@@ -32,8 +32,8 @@
 				<li class="propClone"><a href="index.html">Inicio</a></li>
 				<li class="propClone"><a href="../Enfermera/perfil.html">Modificar perfil</a></li>
 				<li class="propClone"><a href="../Enfermera/cita.html">Citas pendientes</a></li>
-				<li class="propClone"><a href="../Paciente/product.html">Citas aceptadas</a></li>
-				<li class="propClone"><a href="../Paciente/perfil.html">Facturar</a></li>
+				<li class="propClone"><a href="../Enfermera/aceptadas.html">Citas aceptadas</a></li>
+				<li class="propClone"><a href="../Enfermera/product.html">Facturar</a></li>
 				<li class="propClone"><a href="../index.html">Cerrar sesión</a></li>
 			</ul>
 		</div>
@@ -154,7 +154,7 @@
 					<span class="price">
 					<span class="edd_price">Consulta la información correspondiente a las citas aceptadas.</span>
 					<br><br><br>
-					<a class="btn btn-buynow" style="width: 90px; height: 40px; font-size:medium; margin-left: 120px;  line-height: 12px;" href="../Paciente/perfil.html"><span style="text-align:center">Ir</span></a>
+					<a class="btn btn-buynow" style="width: 90px; height: 40px; font-size:medium; margin-left: 120px;  line-height: 12px;" href="../Enfermera/aceptadas.html"><span style="text-align:center">Ir</span></a>
 					</span>
 				
 				</div>
@@ -188,7 +188,7 @@
 						<span class="edd_price">Genera facturas por los servicos prestados a los pacientes.</span>
 					</span>
 					<br> <br><br>
-					<a href="../Paciente/product.html" class="btn btn-buynow" style="width: 90px; height: 40px; font-size:medium; margin-left: 120px;  line-height: 12px; "><span style="text-align:center">Ir</span></a>
+					<a href="../Enfermera/product.html" class="btn btn-buynow" style="width: 90px; height: 40px; font-size:medium; margin-left: 120px;  line-height: 12px; "><span style="text-align:center">Ir</span></a>
 					</span>
 				</div>
 			</div>
