--- a/FrontEnd/Paciente/product.html
+++ b/FrontEnd/Paciente/product.html
@@ -77,7 +77,7 @@
 		</div>
 
 		<div class="col-md-4">
-			<a href="#" class="btn btn-buynow">Checkout</a>
+			<a href="../contact.html" class="btn btn-buynow">Checkout</a>
 			<div class="properties-box">
 				<ol class="unstyle">
 				*Puedes quitar medicamentos seleccionados en el checkout
