--- a/FrontEnd/Medico/inicio.html
+++ b/FrontEnd/Medico/inicio.html
@@ -30,9 +30,10 @@
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="propClone"><a href="index.html">Inicio</a></li>
-				<li class="propClone"><a href="../Paciente/cita.html">Gestiona citas</a></li>
+				<li class="propClone"><a href="../Medico/cita.html">Gestiona citas</a></li>
 				<li class="propClone"><a href="../Medico/aceptadas.html">Completar citas</a></li>
 				<li class="propClone"><a href="../Medico/perfil.html">Modificar perfil</a></li>
+				<li class="propClone"><a href="../Medico/product.html">Imprimir recetas</a></li>
 				<li class="propClone"><a href="../index.html">Cerrar sesión</a></li>
 			</ul>
 		</div>
@@ -161,7 +162,38 @@
 		</div>
 		<!-- /.productbox -->
 	</div>
-	
+	<div class="col-md-4">
+		<div class="productbox">
+			<div class="fadeshop">
+				<div class="captionshop text-center" style="display: none;">
+					<h3>Item Name</h3>
+					<p>
+						 This is a short excerpt to generally describe what the item is about.
+					</p>
+					<p>
+						<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
+						<a href="#" class="learn-more detailslearn"><i class="fa fa-link"></i> Details</a>
+					</p>
+				</div>
+				
+			</div>
+			<i></i><i class="fa fa-file-text" style="font-size: 5cm; display: block; color: #444;"></i>
+			<div class="product-details">
+				<h1 style="font-family: Roboto; text-align: center;">Creación de recetas</h1>
+				<a href="#">
+			
+				</a>
+				<span class="price">
+					<span class="edd_price">Genera citas para los pacientes.</span>
+				</span>
+				<br> <br><br>
+				<a href="../Medico/product.html" class="btn btn-buynow" style="width: 90px; height: 40px; font-size:medium; margin-left: 120px;  line-height: 12px; "><span style="text-align:center">Ir</span></a>
+				</span>
+			</div>
+		</div>
+	</div>
+</div>
+
 		
 </section>
 
