--- a/FrontEnd/Paciente/inicio.html
+++ b/FrontEnd/Paciente/inicio.html
@@ -184,7 +184,7 @@
 <div class="container">
 	<div class="row">
 		<p class="footernote">
-			 Connect with Scorilo
+			 
 		</p>
 		<ul class="social-iconsfooter">
 			<li><a href="#"><i class="fa fa-phone"></i></a></li>
@@ -194,8 +194,8 @@
 			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 		</ul>
 		<p>
-			 &copy; 2017 Your Website Name<br/>
-			Scorilo - Free template by <a href="https://www.wowthemes.net/">WowThemesNet</a>
+			 &copy; 2021 U Hospital<br/>
+			Luisa María Ortíz Romero
 		</p>
 	</div>
 </div>
