--- a/FrontEnd/admin/inicio.html
+++ b/FrontEnd/admin/inicio.html
@@ -107,10 +107,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="uil-comments-alt"></i><span>23</span></a>
+           
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="uil-bell"></i><span>98</span></a>
+            
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
@@ -137,7 +137,7 @@
             <i class="uil-users-alt fs-2 text-center bg-transparent rounded-circle"></i>
             <div class="ms-3">
               <div class="d-flex align-items-center" id="numpacientes">
-                <h3 class="mb-0" >1,245</h3> <span class="d-block ms-2">Pacientes</span>
+                <h3 class="mb-0" id="nopacientes" ></h3> <span class="d-block ms-2">Pacientes</span>
               </div>
               <p class="fs-normal mb-0"></p>
             </div>
@@ -148,7 +148,7 @@
             <i class=" uil-file-medical fs-2 text-center rounded-circle"></i>
             <div class="ms-3" id="pop">
               <div class="d-flex align-items-center">
-                <h3 class="mb-0">34</h3> <span class="d-block ms-2">Médicos</span>
+                <h3 class="mb-0" id="nomedicos"></h3> <span class="d-block ms-2">Médicos</span>
               </div>
               <p class="fs-normal mb-0"></p>
             </div>
@@ -159,7 +159,7 @@
             <i class="uil-pen fs-2 text-center rounded-circle"></i>
             <div class="ms-3">
               <div class="d-flex align-items-center">
-                <h3 class="mb-0">60</h3> <span class="d-block ms-2">Enfermeras</span>
+                <h3 class="mb-0" id="noenfermeras"></h3> <span class="d-block ms-2">Enfermeras</span>
               </div>
               <p class="fs-normal mb-0"></p>
             </div>
@@ -291,7 +291,7 @@
 <!-- partial -->
 <script src="../admin/acciones.js"></script>
 <script src="../admin/pdf.js"></script>
-
+<script src="Modificar usuario/modificaciones.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/chart.js'></script>
 <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
 <script  src="./script.js"></script>
